[package]
name = "potato-plant"
version = "0.1.0"
edition = "2021"

[lib]
name = "popl"
path = "src/lib.rs"

[[bin]]
name = "popl-dash"
path = "src/main.rs"

[dependencies]
iced = { version = "0.9", features = ["tokio", "glow"]}
iced-gauges = "0.0.1"
rppal = { version = "0.14.1", features = ["hal"] }
adafruit_motorkit = "0.1.1"
