[package]
name = "potato-plant"
version = "0.1.0"
edition = "2021"

[lib]
name = "popl"
path = "src/lib.rs"

[[bin]]
name = "popl-dash"
path = "src/main.rs"

[dependencies]
iced = { version = "0.9", features = ["tokio", "glow"]}
iced_aw = { version = "0.5", default-features = false, features = ["tab_bar", "icon_text"]}
iced-gauges = "0.0.1"
rppal = { version = "0.14.1", features = ["hal"] }
embedded-hal = "1.0.0-alpha.9"
adafruit_motorkit = "0.1.1"
crossbeam-channel = "0.5"
async-channel = "1.8"
tokio = { version = "1", features = ["full"] }
clap = {version = "4.3", features = ["derive"]}
nmea = "0.4.0"
serialport = "4.2"
build-time = "0.1"
